bdr.BDR2.scala.error
Erreur de compilation :
BDR2:12: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
   if (readMessage ="F" => forward() y=0 forward() forward()forward() forward() forward()
                    ^BDR2:13: error: ')' expected but 'if' found.
   if (readMessage ="Z")  {backward() y=0 }
   ^BDR2:14: error: ';' expected but 'if' found.
   if (readMessage ="Y")  {backward()  y=0 backward()}
   ^BDR2:26: error: Unmatched closing brace '}' ignored here
	}
        ^